--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <title>Bood Sorteios</title>
 </head>
 <body>
-    <body background="../imagens/bghexa.jpg" id="bg">
+    <body background="bghexa.jpg" id="bg">
 
     <div class="text2">Para sortear basta inserir um valor <font color="#864086">MÍNIMO</font> <br>e um valor <font color="#864086">MÁXIMO</font> e clicar em sortear agora.</div>
             
@@ -28,10 +28,10 @@
     <div class="text3">Os números serão sorteados aleatoriamente pela ferramenta<br> e o resultado será exibido. 
         A probabilidade de um número ser sorteado será sempre igual a dos outros números que 
         participam do sorteio.</div>        
-    <script src="../javascript/index.js"></script>
+    <script src="index.js"></script>
     
     <h6>Desenvolvido by: Jonathan Borges</h6>
-    <img src="../imagens/logo.png"  width="198" height="72" id="logo" />
+    <img src="logo.png"  width="198" height="72" id="logo" />
       </div></div> </div>
 </body>
 </html>
